--- a/locales/vi.json
+++ b/locales/vi.json
@@ -234,6 +234,7 @@
       "caption": "Các mặt hàng trong giỏ hàng",
       "remove_title": "Xóa {{ title }}",
       "subtotal": "Tổng phụ",
+      "promotion": "Chương trình khuyến mãi",
       "new_subtotal": "Tổng phụ mới",
       "note": "Hướng dẫn đặc biệt của đơn hàng",
       "checkout": "Thanh toán",
