--- a/locales/vi.schema.json
+++ b/locales/vi.schema.json
@@ -1227,6 +1227,9 @@
     "main-cart-footer": {
       "name": "Tổng phụ",
       "blocks": {
+        "promotion": {
+          "name": "Chương trình khuyến mãi"
+        },
         "subtotal": {
           "name": "Giá tổng phụ"
         },
